add patching doc